--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<body>
 		Pages:
 		<ul>
-			<li><a href="portfolio/html/index.html">Portfolio - Hero</a></li>
+			<li><a href="docs/html/index.html">Portfolio - Hero</a></li>
 		</ul>
 	</body>
 </html>
