--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <section class="hero" id="about">
     <!--this is a picture of me-->
     <!--    click the picture to go to my about me page directly-->
-    <a href="html/about.html">
-        <img src="img/andre.jpg" alt="Andre da Silva" class="hero-img"/>
+    <a href="./html/about.html">
+        <img src="./img/andre.jpg" alt="Andre da Silva" class="hero-img"/>
     </a>
     <div class="bio">
         <h2 class="name">Andre da Silva</h2>
