Changed "href: '../" to "href: './"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <section class="hero" id="about">
     <!--this is a picture of me-->
     <!--    click the picture to go to my about me page directly-->
-    <a href="./html/about.html">
+    <a href="./about.html">
         <img src="./img/andre.jpg" alt="Andre da Silva" class="hero-img"/>
     </a>
     <div class="bio">
