--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <script src="scripts/nav-menu-loader.js"></script>
+    <script src="./scripts/nav-menu-loader.js"></script>
 </header>
 <section class="hero" id="about">
     <!--this is a picture of me-->
@@ -48,10 +48,10 @@
         music since 2020.</p>
 </section>
 <!--this allows for the hiding/showing of the hamburger menu-->
-<script src="scripts/hamburger-menu.js"></script>
+<script src="./scripts/hamburger-menu.js"></script>
 <!--this allows the styling of the nav buttons to change depending on if they are active or not-->
-<script src="scripts/nav-button-color-changer.js"></script>
+<script src="./scripts/nav-button-color-changer.js"></script>
 </body>
 <footer id="footer"></footer>
-<script src="scripts/footer-script.js"></script>
+<script src="./scripts/footer-script.js"></script>
 </html>
