--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3">
 </head>
 <header>
-    <script src="../scripts/nav-menu-loader.js"></script>
+    <script src="./scripts/nav-menu-loader.js"></script>
 </header>
 <body>
 <!--CSS rules center headings-->
@@ -75,12 +75,12 @@
     </tr>
 </table>
 <!--this line loads a script that controls the color of buttons on the nav bar-->
-<script src="../scripts/nav-button-color-changer.js"></script>
+<script src="./scripts/nav-button-color-changer.js"></script>
 <!--this line loads a scrip that makes the hamburger menu options appear when
  the hamburger menu is clicked if the hamburger menu should be visible given
  the size of the viewport-->
-<script src="../scripts/hamburger-menu.js"></script>
+<script src="./scripts/hamburger-menu.js"></script>
 </body>
 <footer id="footer"></footer>
-<script src="../scripts/footer-script.js"></script>
+<script src="./scripts/footer-script.js"></script>
 </html>
