--- a/portfolio/html/projects.html
+++ b/portfolio/html/projects.html
@@ -11,7 +11,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3">
 </head>
 <header>
-    <script src="../scripts/nav-menu-loader.js"></script>
+    <script src="./scripts/nav-menu-loader.js"></script>
 </header>
 <body>
 <!--you can access my repositories either through here, or by browsing them by going to GitHub from the link I provide on my Social page-->
@@ -71,13 +71,13 @@
         Prolog, given some restrictions on allowed symbols, in one line. </p>
 </div>
 <!--this allows for the hiding/showing of the hamburger menu-->
-<script src="../scripts/hamburger-menu.js"></script>
+<script src="./scripts/hamburger-menu.js"></script>
 <!--this allows the styling of the nav buttons to change depending on if they are active or not-->
-<script src="../scripts/nav-button-color-changer.js"></script>
+<script src="./scripts/nav-button-color-changer.js"></script>
 <!--this script handles the buttons that link to each of the repositories I mention,
 sending the user to the appropriate repository when the button is clicked-->
-<script src="../scripts/project-buttons.js"></script>
+<script src="./scripts/project-buttons.js"></script>
 </body>
 <footer id="footer"></footer>
-<script src="../scripts/footer-script.js"></script>
+<script src="./scripts/footer-script.js"></script>
 </html>
