--- a/portfolio/html/about.html
+++ b/portfolio/html/about.html
@@ -10,7 +10,7 @@
 </head>
 <header>
 <!--    this script loads in the nav menu since it doesn't change across the pages-->
-    <script src="../scripts/nav-menu-loader.js"></script>
+    <script src="./scripts/nav-menu-loader.js"></script>
 </header>
 <body>
 <h1>About Andre</h1>
@@ -52,11 +52,11 @@
         may decide to return to school for graduate work to specialize in security. </p>
 </div>
 <!--this allows for the hiding/showing of the hamburger menu-->
-<script src="../scripts/hamburger-menu.js"></script>
+<script src="./scripts/hamburger-menu.js"></script>
 <!--this allows the styling of the nav buttons to change depending on if they are active or not-->
-<script src="../scripts/nav-button-color-changer.js"></script>
+<script src="./scripts/nav-button-color-changer.js"></script>
 </body>
 <footer id="footer"></footer>
 <!--this script loads in the footer since the text is always the same across all the pages-->
-<script src="../scripts/footer-script.js"></script>
+<script src="./scripts/footer-script.js"></script>
 </html>
