--- a/portfolio/html/contact.html
+++ b/portfolio/html/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <script src="../scripts/nav-menu-loader.js"></script>
+    <script src="./scripts/nav-menu-loader.js"></script>
 </header>
 <div class="container">
     <h1>Contact Andre</h1>
@@ -52,14 +52,14 @@
     </form>
 </div>
 <!--this launches the email client-->
-<script src="../scripts/emailer.js">
+<script src="./scripts/emailer.js">
 </script>
 <!--this allows for the hiding/showing of the hamburger menu-->
-<script src="../scripts/hamburger-menu.js"></script>
+<script src="./scripts/hamburger-menu.js"></script>
 <!--this allows the styling of the nav buttons to change depending on if they are active or not-->
-<script src="../scripts/nav-button-color-changer.js"></script>
+<script src="./scripts/nav-button-color-changer.js"></script>
 </body>
 <footer id="footer"></footer>
 <!--this loads in the footer-->
-<script src="../scripts/footer-script.js"></script>
+<script src="./scripts/footer-script.js"></script>
 </html>
