--- a/portfolio/html/social.html
+++ b/portfolio/html/social.html
@@ -12,7 +12,7 @@
 </head>
 <header>
     <!--    load the header in via a script to avoid code repetition-->
-    <script src="../scripts/nav-menu-loader.js"></script>
+    <script src="./scripts/nav-menu-loader.js"></script>
 </header>
 <body>
 <h1>Connect with me on a variety of social networks!</h1>
@@ -37,10 +37,10 @@
         See the projects I've been working on on GitHub: deddecco
     </a></div>
 <!--this allows for the hiding/showing of the hamburger menu-->
-<script src="../scripts/hamburger-menu.js"></script>
+<script src="./scripts/hamburger-menu.js"></script>
 <!--this allows the styling of the nav buttons to change depending on if they are active or not-->
-<script src="../scripts/nav-button-color-changer.js"></script>
+<script src="./scripts/nav-button-color-changer.js"></script>
 </body>
 <footer id="footer"></footer>
-<script src="../scripts/footer-script.js"></script>
+<script src="./scripts/footer-script.js"></script>
 </html>
