--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3">
 </head>
 <header>
-    <script src="../scripts/nav-menu-loader.js"></script>
+    <script src="./scripts/nav-menu-loader.js"></script>
 </header>
 <body>
 <div class="container mt-5">
@@ -30,10 +30,10 @@
     </div>
 </div>
 <!--this allows for the hiding/showing of the hamburger menu-->
-<script src="../scripts/hamburger-menu.js"></script>
+<script src="./scripts/hamburger-menu.js"></script>
 <!--this allows the styling of the nav buttons to change depending on if they are active or not-->
-<script src="../scripts/nav-button-color-changer.js"></script>
+<script src="./scripts/nav-button-color-changer.js"></script>
 </body>
 <footer id="footer"></footer>
-<script src="../scripts/footer-script.js"></script>
+<script src="./scripts/footer-script.js"></script>
 </html>
