Changed "href: '../" to "href: './"

--- a/social.html
+++ b/social.html
@@ -17,21 +17,21 @@
 <body>
 <h1>Connect with me on a variety of social networks!</h1>
 <div class="center-container"><a href="https://x.com/deddecco" target="_blank" class="social-media-button">
-    <img src="../img/social-logos/x logo.png"
+    <img src="./img/social-logos/x logo.png"
          alt="X/Twitter Logo"
          class="button-icon">
     Follow me on Twitter: @deddecco
 </a>
     <br><br><br>
     <a href="https://www.instagram.com/dedecco_/" target="_blank" class="social-media-button">
-        <img src="../img/social-logos/sm_5b32227e9386b.jpg"
+        <img src="./img/social-logos/sm_5b32227e9386b.jpg"
              alt="Instagram Logo"
              class="button-icon">
         Follow me on Instagram or Threads: @dedecco_
     </a>
     <br><br><br>
     <a href="https://github.com/deddecco" target="_blank" class="social-media-button">
-        <img src="../img/social-logos/download.png"
+        <img src="./img/social-logos/download.png"
              alt="GitHub Logo"
              class="button-icon">
         See the projects I've been working on on GitHub: deddecco
